EDO-198 Fixes overflow of listed persons that already achieved a skill
Resolves EDO-211

--- a/src/main/webapp/app/shared/skill-details/skill-details-info.scss
+++ b/src/main/webapp/app/shared/skill-details/skill-details-info.scss
@@ -84,12 +84,14 @@
 }
 
 .avatar-team {
+    flex: 0 0 16%;
     box-sizing: border-box;
-    margin: 12px;
+    margin: 2px 0;
 }
 
 .achieved-by-teams, .needed-for-levels, .needed-for-badges {
     display: flex;
+    flex-wrap: wrap;
     > * {
         display: inline-flex;
     }
